# MTH088-2026-ParaProp

./: .gitignore  .rumdl.toml  .typos.toml  README.md  mise.toml  prek.toml  pyproject.toml  ruff.toml
docs/: experiment_walkthrough.md
docs/vi/report/: main.typ  references.yaml
src/paraprop/: __init__.py  analyze.py  datasets.py  engine.py  metrics.py  models.py  optim.py  train.py  typing.py
